<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/nameLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="text"
            android:hint="@string/enterName"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lastNameLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:layout_below="@+id/nameLine">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastName" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="text"
            android:hint="@string/enterLastName"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/webLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:layout_below="@+id/lastNameLine">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web"/>

        <EditText
            android:id="@+id/web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textUri"
            android:hint="@string/enterWeb"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/telLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:layout_below="@+id/webLine">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tel" />

    <EditText
        android:id="@+id/tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="number"
        android:hint="@string/enterTel"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#F3F1DF"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="#54BE42"
            android:text="@string/show"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="buttonShowPressed"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="#C41919"
            android:text="@string/delete"
            android:textColorHighlight="#005E4343"
            android:textSize="20sp"
            android:onClick="buttonDeletePressed"/>
    </LinearLayout>

</RelativeLayout>